--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,7 @@ jobs:
       run: mvn clean test
     - name: run integration tests
       env:
+          JWT_SECRET_TOKEN: ${{ secrets.JWT_SECRET_TOKEN }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_HOST: ${{ secrets.DB_HOST }}
